namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: etraffica
  labels:
    app: etraffica
