api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: etraffica
  labels:
    app: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api-gateway
          image: 0680/etraffica.v2.api-gateway:30.06.26.01
          imagePullPolicy: Always
          ports:
            - containerPort: 4300
              name: http
          livenessProbe:
            httpGet:
              path: /api/v1/health/live
              port: 4300
            initialDelaySeconds: 25
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/health/ready
              port: 4300
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "768Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: etraffica
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 4300
      targetPort: 4300
